--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=4000
 DB_CNN = mongodb+srv://user_node_cafe:KuPv7Gzu4qqMMmUK@miclustercafe.b9hux.mongodb.net/calendarDB
+SECRET_KEY = miSecreto
